Spacing of embedded videos on content detail view fixed, hopefully

--- a/assets/sass/_embeds.scss
+++ b/assets/sass/_embeds.scss
@@ -1,10 +1,15 @@
 /** Video **/
 .embedded-media{
+    padding: 15px 0px;
     ul{
         margin-left: auto;
         margin-right: auto;
         max-width: 600px;
     }
+}
+
+.media-li{
+    padding: 15px 0px;
 }
 
 .media-wrapper{
